syntax = "proto3";

package blog;

option go_package = "blog/proto;proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service Blog {
  rpc getAllArticles (GetAllArticlesRequest) returns (GetAllArticlesResponse);
  rpc getArticle (GetArticleRequest) returns (GetArticleResponse);
  rpc createArticle (CreateArticleRequest) returns (CreateArticleResponse);
  rpc deleteArticle (DeleteArticleRequest) returns (google.protobuf.Empty);
  rpc updateArticle (UpdateArticleRequest) returns (UpdateArticleResponse);
}

message GetAllArticlesRequest {
  // Only returns articles where the author is in this list
  // If empty, no author filtering is applied
  repeated string authors_filter = 1;

  message TimeFilter {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
  }

  // Only returns articles created within this time range
  // If not set, no time filtering is applied
  TimeFilter time_filter = 2;

  // Only returns articles where the title or content contains any of these strings
  // If empty, no text filtering is applied
  repeated string text_search = 3;
}

message GetAllArticlesResponse {
  repeated Article articles = 1;
}

message GetArticleRequest {
    string id = 1;
}

message GetArticleResponse {
    Article article = 1;
}

message CreateArticleRequest {
  string title = 1;
  string content = 2;
  string author = 3;
}

message CreateArticleResponse {
    Article article = 1;
}

message DeleteArticleRequest {
    string id = 1;
}

message UpdateArticleRequest {
  string id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
}

message UpdateArticleResponse {
    Article article = 1;
}

message Article {
  string id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
